--- a/rizuge/css/iconfont.css
+++ b/rizuge/css/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('../icon/iconfont.eot?t=1491071457493'); /* IE9*/
-  src: url('iconfont.eot?t=1491071457493#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1491071457493') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1491071457493') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1491071457493#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1491676723608'); /* IE9*/
+  src: url('iconfont.eot?t=1491676723608#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1491676723608') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1491676723608') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1491676723608#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -15,35 +15,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-location:before { content: "\e600"; }
+.icon-dingwei:before { content: "\e606"; }
 
-.icon-order:before { content: "\e60b"; }
+.icon-heart:before { content: "\e649"; }
 
-.icon-xiaoxi:before { content: "\e613"; }
-
-.icon-zuobiao:before { content: "\e601"; }
-
-.icon-zaijia:before { content: "\e6ad"; }
-
-.icon-gr:before { content: "\e607"; }
-
-.icon-anfangzaijia:before { content: "\e725"; }
-
-.icon-anfangzaijia1:before { content: "\e730"; }
-
-.icon-shouye:before { content: "\e604"; }
-
-.icon-icon_cook:before { content: "\e608"; }
-
-.icon-yunxuzuofan:before { content: "\e62e"; }
-
-.icon-duwei:before { content: "\e867"; }
-
-.icon-shouyeshouye:before { content: "\e60c"; }
-
-.icon-sanjiao:before { content: "\e616"; }
-
-.icon-qiehuanfangdong:before { content: "\e693"; }
-
-.icon-xishuyongpin:before { content: "\e626"; }
+.icon-filter:before { content: "\e602"; }
 
